<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CanecaVerdeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_exit_cv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/xcerrar"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_back_cv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flechaatras"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/encabezado"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bordes_redondeados_subtitle"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/p_1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back_cv" />

            <TextView
                android:id="@+id/pregunta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/pregunta_1_cv"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/encabezado" />

            <Button
                android:id="@+id/next"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bordes_redondeados_rojo"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opciones_v" />

            <TextView
                android:id="@+id/result"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/open_sans_bold"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pregunta" />

            <RadioGroup
                android:id="@+id/opciones_v"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pregunta">

                <RadioButton
                    android:id="@+id/opcion_1_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_1_cv"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_2_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_2_cv"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_3_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_3_cv"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_4_v"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_4_cv"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

            </RadioGroup>

            <FrameLayout
                android:id="@+id/frame_cv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next">

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>