<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CanecaBlancaActivity">

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/next2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bordes_redondeados_rojo"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opciones" />

            <RadioGroup
                android:id="@+id/opciones"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pregunta2">

                <RadioButton
                    android:id="@+id/opcion_1_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_1_cb"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_2_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_2_cb"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_3_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_3_cb"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/opcion_4_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/r_1_4_cb"
                    android:textAlignment="viewStart"
                    android:textSize="18sp" />

            </RadioGroup>

            <ImageView
                android:id="@+id/btn_exit_cb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/xcerrar"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/btn_back_cb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/flechaatras"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/encabezado2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bordes_redondeados_subtitle"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/p_1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back_cb" />

            <TextView
                android:id="@+id/pregunta2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/pregunta_1_cb"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/encabezado2" />

            <TextView
                android:id="@+id/result_2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/open_sans_bold"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/next2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pregunta2" />

            <FrameLayout
                android:id="@+id/frame_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next2">

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>